--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -928,7 +928,11 @@ h1, h2, h3, h4, h5, h6 {
   padding: 17px 0;
 }
 .reg-end{
-  background: #f17c1c;
+  /* background: #f17c1c; */
+  background: url(../img/bg213.jpg);
+  background-size: contain;
+  background-repeat: repeat-x;
+  
   width: 100%;
   height: 25px;
   display: block;
