--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -825,14 +825,14 @@ h1, h2, h3, h4, h5, h6 {
     background-size: cover;
     border-top: 4px solid #f17c1c;
     background-attachment: fixed;
-    margin-bottom: -50px;
+    /* margin-bottom: -50px; */
 }
 #timer .overlay{
   position: relative;
   padding: 30px 0px;
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 220px;
+  
   margin: 0px;
 }
 #timer h1{
@@ -862,10 +862,10 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width:575px)
 {
   #timer{
-    height: 430px;
+    /* height: 430px; */
   }
   #timer .overlay{
-    height: 320px;
+    /* height: 320px; */
   }
   
   #timer h1{
